--- a/packages.config
+++ b/packages.config
@@ -1,28 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AForge.Math" version="2.2.5" targetFramework="net461" />
   <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net462" />
-  <package id="CodeFluentRuntimeClient" version="1.0.0.844" targetFramework="net461" />
+  <package id="CodeFluentRuntimeClient" version="1.0.0.844" targetFramework="net462" />
   <package id="FluentAssertions" version="4.14.0" targetFramework="net462" />
-  <package id="JetBrains.Annotations" version="10.1.5" targetFramework="net461" />
+  <package id="JetBrains.Annotations" version="10.1.5" targetFramework="net462" />
   <package id="LanguageExt.Core" version="1.9.2" targetFramework="net462" />
   <package id="ManagedEsent" version="1.9.4" targetFramework="net461" />
   <package id="MathNet.Numerics" version="3.13.1" targetFramework="net462" />
-  <package id="Microsoft.Database.Collections.Generic" version="1.9.4" targetFramework="net461" />
-  <package id="Microsoft.Database.Isam" version="1.9.4" targetFramework="net461" />
-  <package id="NBitcoin" version="3.0.0.57" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="ngit" version="1.0.0.20110815" targetFramework="net461" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
-  <package id="NUnit" version="2.6.4" targetFramework="net461" />
+  <package id="Microsoft.Database.Collections.Generic" version="1.9.4" targetFramework="net462" />
+  <package id="Microsoft.Database.Isam" version="1.9.4" targetFramework="net462" />
+  <package id="Mono.Security" version="3.2.3.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net462" />
+  <package id="NUnit" version="2.6.4" targetFramework="net462" />
   <package id="RandomNameGeneratorLibrary" version="1.2.1" targetFramework="net462" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="net461" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net461" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="net461" />
-  <package id="Rx-Main" version="2.2.5" targetFramework="net461" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net461" />
-  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net461" />
-  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net461" />
-  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net461" />
-  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net461" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net462" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net462" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net462" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net462" />
 </packages>
