--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -65,6 +65,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentAssertions">
+      <HintPath>..\..\Projects\packages\FluentAssertions.5.1.1\lib\net47\FluentAssertions.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -186,6 +189,7 @@
     <Compile Include="Internet\IPHelperInvoke.cs" />
     <Compile Include="Maths\ByteSize.cs" />
     <Compile Include="Maths\ArithmeticMethods.cs" />
+    <Compile Include="Maths\Union.cs" />
     <Compile Include="Maths\Murmur3.cs" />
     <Compile Include="Maths\HumanCalculator.cs" />
     <Compile Include="Maths\MathTests.cs" />
@@ -787,10 +791,10 @@
       <Version>1.6.2</Version>
     </PackageReference>
     <PackageReference Include="FluentAssertions">
-      <Version>5.0.0</Version>
+      <Version>5.1.2</Version>
     </PackageReference>
     <PackageReference Include="Fody">
-      <Version>2.4.1</Version>
+      <Version>2.4.2</Version>
     </PackageReference>
     <PackageReference Include="FSharp.Core">
       <Version>4.3.4</Version>
@@ -802,16 +806,16 @@
       <Version>2.1.32</Version>
     </PackageReference>
     <PackageReference Include="MathNet.Numerics.FSharp">
-      <Version>4.0.0</Version>
+      <Version>4.2.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Database.Collections.Generic">
       <Version>1.9.4</Version>
     </PackageReference>
     <PackageReference Include="Mono.Security">
-      <Version>3.2.3</Version>
+      <Version>5.4.0.201</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>10.0.3</Version>
+      <Version>11.0.1</Version>
     </PackageReference>
     <PackageReference Include="Ninject">
       <Version>3.3.4</Version>
