--- a/Tests/Librainian Tests.csproj
+++ b/Tests/Librainian Tests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{9145F7DE-0F34-436D-B3BA-FA7E96E430E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tests</RootNamespace>
-    <AssemblyName>Tests</AssemblyName>
+    <RootNamespace>LibrainianTests</RootNamespace>
+    <AssemblyName>Librainian Tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -62,9 +62,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="FluentAssertions">
-      <HintPath>C:\Users\Rick\.nuget\packages\fluentassertions\5.0.0\lib\net45\FluentAssertions.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework, Version=3.9.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.9.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -79,6 +76,9 @@
   <ItemGroup>
     <PackageReference Include="Costura.Fody">
       <Version>1.6.2</Version>
+    </PackageReference>
+    <PackageReference Include="FluentAssertions">
+      <Version>5.1.2</Version>
     </PackageReference>
     <PackageReference Include="Fody">
       <Version>2.4.1</Version>
