Suddenly the .vs folder is not being ignored..

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,9 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 /.vs/Librainian/v15/Server/sqlite3
+.vs/Librainian/DesignTimeBuild/.dtbcache
+.vs/Librainian/DesignTimeBuild/.dtbcache
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+.vs/Librainian/DesignTimeBuild/.dtbcache
+.vs/Librainian/DesignTimeBuild/.dtbcache
