--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -12,15 +12,23 @@
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <AssemblyInfoFilePath>Properties\AssemblyInfo.cs</AssemblyInfoFilePath>
-    <UpdateAssemblyVersion>True</UpdateAssemblyVersion>
-    <UpdateAssemblyFileVersion>True</UpdateAssemblyFileVersion>
-    <UpdateAssemblyInfoVersion>True</UpdateAssemblyInfoVersion>
-    <AssemblyVersionSettings>YearStamp.MonthStamp.DayStamp.TimeStamp</AssemblyVersionSettings>
-    <AssemblyFileVersionSettings>YearStamp.MonthStamp.DayStamp.TimeStamp</AssemblyFileVersionSettings>
-    <AssemblyInfoVersionSettings>YearStamp.MonthStamp.DayStamp.TimeStamp</AssemblyInfoVersionSettings>
+    <UpdateAssemblyVersion>False</UpdateAssemblyVersion>
+    <UpdateAssemblyFileVersion>False</UpdateAssemblyFileVersion>
+    <UpdateAssemblyInfoVersion>False</UpdateAssemblyInfoVersion>
+    <AssemblyVersionSettings>
+    </AssemblyVersionSettings>
+    <AssemblyFileVersionSettings>
+    </AssemblyFileVersionSettings>
+    <AssemblyInfoVersionSettings>
+    </AssemblyInfoVersionSettings>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <ShouldCreateLogs>False</ShouldCreateLogs>
+    <AdvancedSettingsExpanded>False</AdvancedSettingsExpanded>
+    <UpdatePackageVersion>False</UpdatePackageVersion>
+    <AssemblyInfoVersionType>SettingsVersion</AssemblyInfoVersionType>
+    <InheritWinAppVersionFrom>None</InheritWinAppVersionFrom>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -145,6 +153,8 @@
     <Compile Include="Collections\PriorityTime.cs" />
     <Compile Include="Collections\Shufflings.cs" />
     <Compile Include="Collections\StringTable.cs" />
+    <Compile Include="ComputerSystem\FileSystem\FileAttributeData.cs" />
+    <Compile Include="ComputerSystem\FileSystem\Αρχείο.cs" />
     <Compile Include="ComputerSystem\FileSystem\FindEveryDocument.cs" />
     <Compile Include="ComputerSystem\FileSystem\MasterDocumentTable.cs" />
     <Compile Include="ComputerSystem\FileSystem\Unique.cs" />
@@ -244,11 +254,14 @@
     <Compile Include="Financial\Currency\Coins\Penny.cs" />
     <Compile Include="Financial\Currency\Coins\Quarter.cs" />
     <Compile Include="Financial\Store.cs" />
+    <Compile Include="Internet\Internet.cs" />
+    <Compile Include="Internet\TheInternetTests.cs" />
     <Compile Include="Logging\InformationLevel.cs" />
     <Compile Include="Logging\Logging.cs" />
     <Compile Include="Logging\LoggingLevel.cs" />
     <Compile Include="Logging\Targets.cs" />
     <Compile Include="Maths\NonRandomSequence.cs" />
+    <Compile Include="Maths\NumberExtensions.cs" />
     <Compile Include="Maths\Numbers\BigInt.cs" />
     <Compile Include="Misc\Go.cs" />
     <Compile Include="Graphics\Imaging\FasterBitmap.cs" />
@@ -376,7 +389,7 @@
     <Compile Include="Graphics\Video\CarrierImage.cs" />
     <Compile Include="Internet\OAuthBase.cs" />
     <Compile Include="Internet\TraceExtensions.cs" />
-    <Compile Include="Internet\Internet.cs" />
+    <Compile Include="Internet\TheNet.cs" />
     <Compile Include="OperatingSystem\ComputerFingerPrint.cs" />
     <Compile Include="ComputerSystem\FileSystem\DefragExtensions.cs" />
     <Compile Include="ComputerSystem\FileSystem\DocumentExtensions.cs" />
@@ -551,7 +564,7 @@
     <Compile Include="Magic\IoC.cs" />
     <Compile Include="Magic\MagicExtensions.cs" />
     <Compile Include="Magic\NinjectIocContainer.cs" />
-    <Compile Include="ComputerSystem\FileSystem\Crc32.cs" />
+    <Compile Include="Security\Crc32.cs" />
     <Compile Include="ComputerSystem\FileSystem\IOExtensions.cs" />
     <Compile Include="ComputerSystem\FileSystem\Document.cs" />
     <Compile Include="Internet\Browser\Chrome.cs" />
@@ -779,7 +792,7 @@
     <Compile Include="Extensions\GuidExtensions.cs" />
     <Compile Include="Extensions\Enums.cs" />
     <Compile Include="OperatingSystem\NativeMethods.cs" />
-    <Compile Include="Threading\FileSingleton.cs" />
+    <Compile Include="Threading\SingleAccess.cs" />
     <Compile Include="Graphics\DDD\CoordinateF.cs" />
     <Compile Include="Graphics\DDD\Coordinate64.cs" />
     <Compile Include="Maths\Numbers\AtomicDouble.cs" />
@@ -852,6 +865,9 @@
     <PackageReference Include="JetBrains.Annotations">
       <Version>2018.2.1</Version>
     </PackageReference>
+    <PackageReference Include="JetBrains.DotMemoryUnit">
+      <Version>2.3.20160517.113140</Version>
+    </PackageReference>
     <PackageReference Include="LinqFaster.SIMD.Parallel">
       <Version>1.0.0</Version>
     </PackageReference>
@@ -877,16 +893,16 @@
       <Version>1.2.2</Version>
     </PackageReference>
     <PackageReference Include="ReactiveUI">
-      <Version>9.4.1</Version>
+      <Version>9.7.2</Version>
     </PackageReference>
     <PackageReference Include="ReactiveUI.Events.Winforms">
-      <Version>9.4.1</Version>
+      <Version>9.7.2</Version>
     </PackageReference>
     <PackageReference Include="ReactiveUI.Fody">
-      <Version>9.4.1</Version>
+      <Version>9.7.2</Version>
     </PackageReference>
     <PackageReference Include="ReactiveUI.WinForms">
-      <Version>9.4.1</Version>
+      <Version>9.7.2</Version>
     </PackageReference>
     <PackageReference Include="Rx-Core">
       <Version>2.2.5</Version>
@@ -910,7 +926,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
+      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
