--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -62,6 +62,7 @@
     <Prefer32Bit>false</Prefer32Bit>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <LangVersion>7.3</LangVersion>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Single Image|AnyCPU'">
     <OutputPath>bin\Single Image\</OutputPath>
@@ -73,6 +74,7 @@
     <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
@@ -107,6 +109,7 @@
     <LangVersion>7.3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Single Image|x64'">
     <OutputPath>bin\x64\Single Image\</OutputPath>
@@ -118,6 +121,7 @@
     <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -140,9 +144,6 @@
     <Reference Include="System.Speech" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="Windows">
-      <HintPath>C:\Program Files (x86)\Windows Kits\10\App Certification Kit\winmds\winphone81\Windows.winmd</HintPath>
-    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -154,9 +155,10 @@
     <Compile Include="Collections\Shufflings.cs" />
     <Compile Include="Collections\StringTable.cs" />
     <Compile Include="ComputerSystem\FileSystem\FileAttributeData.cs" />
-    <Compile Include="ComputerSystem\FileSystem\Αρχείο.cs" />
+    <Compile Include="ComputerSystem\FileSystem\FileWatchingEvents.cs" />
     <Compile Include="ComputerSystem\FileSystem\FindEveryDocument.cs" />
     <Compile Include="ComputerSystem\FileSystem\MasterDocumentTable.cs" />
+    <Compile Include="ComputerSystem\FileSystem\PathInternal.cs" />
     <Compile Include="ComputerSystem\FileSystem\Unique.cs" />
     <Compile Include="ComputerSystem\FileSystem\UniqueExtensions.cs" />
     <Compile Include="ComputerSystem\FileSystem\Win32DiskPartition.cs" />
@@ -260,6 +262,7 @@
     <Compile Include="Logging\Logging.cs" />
     <Compile Include="Logging\LoggingLevel.cs" />
     <Compile Include="Logging\Targets.cs" />
+    <Compile Include="Maths\MicrosoftsRandom.cs" />
     <Compile Include="Maths\NonRandomSequence.cs" />
     <Compile Include="Maths\NumberExtensions.cs" />
     <Compile Include="Maths\Numbers\BigInt.cs" />
@@ -346,6 +349,7 @@
     <Compile Include="Security\Document.cs" />
     <Compile Include="Security\GpwData.cs" />
     <Compile Include="Security\PronounceablePasswordCreator.cs" />
+    <Compile Include="Threading\ReaderWriter.cs" />
     <Compile Include="Threading\Job.cs" />
     <Compile Include="Threading\UnitofWork.cs" />
     <Compile Include="Threading\VolatileBoolean.cs" />
@@ -439,7 +443,6 @@
     <Compile Include="Collections\MultiKeyDictionary.cs" />
     <Compile Include="Collections\PairOfDoubles.cs" />
     <Compile Include="Collections\ParallelList.cs" />
-    <Compile Include="Collections\Q.cs" />
     <Compile Include="Collections\QueueWaiting.cs" />
     <Compile Include="Collections\SingleLinkNode.cs" />
     <Compile Include="Collections\StringVersusGuid.cs" />
@@ -564,7 +567,7 @@
     <Compile Include="Magic\IoC.cs" />
     <Compile Include="Magic\MagicExtensions.cs" />
     <Compile Include="Magic\NinjectIocContainer.cs" />
-    <Compile Include="Security\Crc32.cs" />
+    <Compile Include="Security\CRC32.cs" />
     <Compile Include="ComputerSystem\FileSystem\IOExtensions.cs" />
     <Compile Include="ComputerSystem\FileSystem\Document.cs" />
     <Compile Include="Internet\Browser\Chrome.cs" />
@@ -714,7 +717,7 @@
     <Compile Include="Security\Crypto.cs" />
     <Compile Include="Security\FilePasswordPair.cs" />
     <Compile Include="Security\SteganographyHelper.cs" />
-    <Compile Include="Security\Crc64.cs" />
+    <Compile Include="Security\CRC64.cs" />
     <Compile Include="Security\Crc64Iso.cs" />
     <Compile Include="Security\Impersonator.cs" />
     <Compile Include="Security\SecurityExtensions.cs" />
@@ -820,7 +823,7 @@
     <Compile Include="Threading\Singleton.cs" />
     <Compile Include="Extensions\DirectoryInfos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Threading\TaskExtensions2.cs" />
+    <Compile Include="Threading\TaskExtensions.cs" />
     <Compile Include="Threading\ThreadingExtensions.cs" />
     <Compile Include="Threading\FluentTimer.cs" />
   </ItemGroup>
@@ -926,7 +929,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
