--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -296,7 +296,6 @@
     <Compile Include="Measurement\BenchmarkResult.cs" />
     <Compile Include="Measurement\Spatial\Compass.cs" />
     <Compile Include="Measurement\Time\StopwatchStruct.cs" />
-    <Compile Include="Measurement\Time\DateSpanTests.cs" />
     <Compile Include="Measurement\Time\DateSpan.cs" />
     <Compile Include="Measurement\Time\CountDownWatch.cs" />
     <Compile Include="Measurement\Time\DateInterval.cs" />
@@ -308,7 +307,6 @@
     <Compile Include="OperatingSystem\Audio.cs" />
     <Compile Include="OperatingSystem\ExternDll.cs" />
     <Compile Include="OperatingSystem\OSExtensions.cs" />
-    <Compile Include="OperatingSystem\OSInfoTests.cs" />
     <Compile Include="OperatingSystem\RegistryContext.cs" />
     <Compile Include="OperatingSystem\Storage\DetectSSD.cs" />
     <Compile Include="OperatingSystem\Info.cs" />
@@ -868,7 +866,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Costura.Fody">
-      <Version>3.3.2</Version>
+      <Version>3.3.3</Version>
     </PackageReference>
     <PackageReference Include="Fody">
       <Version>4.0.2</Version>
@@ -908,16 +906,16 @@
       <Version>1.3.3</Version>
     </PackageReference>
     <PackageReference Include="ReactiveUI">
-      <Version>9.11.1</Version>
+      <Version>9.11.3</Version>
     </PackageReference>
     <PackageReference Include="ReactiveUI.Events.Winforms">
-      <Version>9.11.1</Version>
+      <Version>9.11.3</Version>
     </PackageReference>
     <PackageReference Include="ReactiveUI.Fody">
-      <Version>9.11.1</Version>
+      <Version>9.11.3</Version>
     </PackageReference>
     <PackageReference Include="ReactiveUI.WinForms">
-      <Version>9.11.1</Version>
+      <Version>9.11.3</Version>
     </PackageReference>
     <PackageReference Include="Rx-Core">
       <Version>2.2.5</Version>
@@ -941,7 +939,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
