--- a/Tests/LibrainianTests.csproj
+++ b/Tests/LibrainianTests.csproj
@@ -60,12 +60,16 @@
     <Compile Include="FileHistoryFileTests.cs" />
     <Compile Include="FolderBagTests.cs" />
     <Compile Include="FolderTests.cs" />
+    <Compile Include="Linguistics\ParsingTests.cs" />
     <Compile Include="Linguistics\SentenceTests.cs" />
     <Compile Include="Maths\ArithmeticMethods.cs" />
+    <Compile Include="Maths\DateSpanTests.cs" />
     <Compile Include="Maths\MathsTests.cs" />
     <Compile Include="Maths\TimeTests.cs" />
     <Compile Include="MyClass.cs" />
+    <Compile Include="OperatingSystem\TestPartitions.cs" />
     <Compile Include="OperatingSystem\FileHistoryFileTests.cs" />
+    <Compile Include="OperatingSystem\OSInfoTests.cs" />
     <Compile Include="PasswordTests.cs" />
     <Compile Include="PathSplitterTests.cs" />
     <Compile Include="Persistence\IniFileTests.cs" />
