--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -339,7 +339,7 @@
     <Compile Include="Parsing\Validation\ValidatedStringJsonNetConverter.cs" />
     <Compile Include="Persistence\Cache.cs" />
     <Compile Include="Persistence\CommonResultCode.cs" />
-    <Compile Include="Persistence\IIni.cs" />
+    <Compile Include="Persistence\InIFiles\IIni.cs" />
     <Compile Include="Persistence\ResourceScanner.cs" />
     <Compile Include="Persistence\Settings.cs" />
     <Compile Include="Persistence\AppRegistry.cs" />
@@ -434,8 +434,8 @@
     <Compile Include="Measurement\Time\StopWatch.cs" />
     <Compile Include="Measurement\Time\DurationParser.cs" />
     <Compile Include="Parsing\ParagraphExtensions.cs" />
-    <Compile Include="Persistence\IniFile.cs" />
-    <Compile Include="Persistence\Ini.cs" />
+    <Compile Include="Persistence\InIFiles\IniFile.cs" />
+    <Compile Include="Persistence\InIFiles\Ini.cs" />
     <Compile Include="Collections\Queues\BlockingQueue.cs" />
     <Compile Include="Collections\Lists\ConcurrentList.cs" />
     <Compile Include="Collections\Sets\ConcurrentSet.cs" />
@@ -837,12 +837,9 @@
     <None Include="Security\md5sum.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="App.config">
+    <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-    <EmbeddedResource Include="Licenses\MIT License.md">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Measurement\Currency\USD\" />
@@ -939,7 +936,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
+      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
