--- a/Tests/LibrainianTests.csproj
+++ b/Tests/LibrainianTests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="PathSplitterTests.cs" />
     <Compile Include="Persistence\IniFileTests.cs" />
     <Compile Include="Persistence\JSONFileTests.cs" />
+    <Compile Include="Persistence\MaxMemTests.cs" />
     <Compile Include="PhysicalDiskTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityTests.cs" />
@@ -102,6 +103,9 @@
       <Project>{722E3411-B605-4AF8-ADEA-D2D18BC9CD2C}</Project>
       <Name>Librainian</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
